--- a/client/src/Routes/Login/Login.css
+++ b/client/src/Routes/Login/Login.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Black+Han+Sans&family=Noto+Sans+KR:wght@500&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Black+Han+Sans&family=Noto+Sans+KR:wght@500&display=swap");
 * {
   box-sizing: border-box;
 }
@@ -23,9 +23,7 @@ html,
   width: 100%;
   height: 100%;
 }
-.navbar-light {
-  /* background-color: #ffffff;
-  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2); */
+.navbar-light {  
   background-color: rgba(20, 20, 20, 0.8);
   z-index: 10;
   box-shadow: 0px 1px 5px 2px rgba(0, 0, 0, 0.8);
@@ -36,8 +34,8 @@ html,
   flex-direction: column;
   text-align: left;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("https://img.wallpapersafari.com/desktop/1920/1080/2/86/Uyk6NL.jpg");
-  /* #1c8ef9 !important */
+    url("https://assets.nflxext.com/ffe/siteui/vlv3/c385496a-2ed6-4081-9783-49a1ac8a5bbf/7e9484b8-19af-4bcc-8956-501c4b2165fc/KR-ko-20200629-popsignuptwoweeks-perspective_alpha_website_large.jpg");     
+  
   background-size: cover;
   background-position: center center;
   min-height: 100vh;
@@ -76,4 +74,4 @@ html,
 }
 .forgot-password a {
   color: #167bff;
-}
+} */
