--- a/client/src/Routes/Reservation/style.css
+++ b/client/src/Routes/Reservation/style.css
@@ -4,8 +4,10 @@
 }
 .seat {
   background-color: #444451;
-  height: 12px;
-  width: 15px;
+  font-size: 13px;
+  text-align: center;
+  height: 17px;
+  width: 20px;
   margin: 3px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
@@ -55,7 +57,7 @@
 .screen {
   background-color: #fff;
   height: 70px;
-  width: 35%;
+  width: 70%;
   margin: 0 auto;
   transform: rotateX(-45deg);
   box-shadow: 0 3px 10px rgba(255, 255, 255, 0.7);
