--- a/client/src/Routes/Login/Login.css
+++ b/client/src/Routes/Login/Login.css
@@ -1,4 +1,4 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Black+Han+Sans&family=Noto+Sans+KR:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Black+Han+Sans&family=Noto+Sans+KR:wght@500&display=swap");
 * {
   box-sizing: border-box;
 }
@@ -12,18 +12,17 @@ label,
 span {
   font-weight: 500;
   font-family: "Noto Sans KR", sans-serif;
-  color: #ffffff;
+  color: #000000;
 }
 body,
 html,
 .App,
 #root,
-
 .auth-wrapper {
   width: 100%;
   height: 100%;
 }
-.navbar-light {  
+.navbar-light {
   background-color: rgba(20, 20, 20, 0.8);
   z-index: 10;
   box-shadow: 0px 1px 5px 2px rgba(0, 0, 0, 0.8);
@@ -34,8 +33,8 @@ html,
   flex-direction: column;
   text-align: left;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("https://assets.nflxext.com/ffe/siteui/vlv3/c385496a-2ed6-4081-9783-49a1ac8a5bbf/7e9484b8-19af-4bcc-8956-501c4b2165fc/KR-ko-20200629-popsignuptwoweeks-perspective_alpha_website_large.jpg");     
-  
+    url("https://assets.nflxext.com/ffe/siteui/vlv3/c385496a-2ed6-4081-9783-49a1ac8a5bbf/7e9484b8-19af-4bcc-8956-501c4b2165fc/KR-ko-20200629-popsignuptwoweeks-perspective_alpha_website_large.jpg");
+
   background-size: cover;
   background-position: center center;
   min-height: 100vh;
@@ -74,4 +73,4 @@ html,
 }
 .forgot-password a {
   color: #167bff;
-} */
+}
