--- a/client/src/Routes/Reservation/style.css
+++ b/client/src/Routes/Reservation/style.css
@@ -3,17 +3,19 @@
   margin-bottom: 30px;
 }
 .seat {
-  background-color: #444451;
+  /* background-color: #444451; */
+  background-color: rgb(96, 93, 170);
   font-size: 13px;
   text-align: center;
-  height: 17px;
-  width: 20px;
+  font-weight: 600;
+  height: 20px;
+  width: 25px;
   margin: 3px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
 .seat.selected {
-  background-color: #6feaf6;
+  background-color: rgb(120, 205, 1);
 }
 .seat.occupied {
   background-color: #fff;
@@ -57,7 +59,7 @@
 .screen {
   background-color: #fff;
   height: 70px;
-  width: 70%;
+  width: 100%;
   margin: 0 auto;
   transform: rotateX(-45deg);
   box-shadow: 0 3px 10px rgba(255, 255, 255, 0.7);
