--- a/client/src/Routes/DetailProductPage/Section/style.css
+++ b/client/src/Routes/DetailProductPage/Section/style.css
@@ -5,10 +5,10 @@
 }
 
 .image-gallery {
-    /* width: 40%; */
-    /* border:3px solid pink; */
+    /* width: 90%; */
+    border:3px solid pink;
 
-    /* max-height: 400px; */
+    max-height: 400px;
     height: auto;
 }
 
